buttons: Fix icon-button icon alignment on variable sizes.
This commit center aligns the icon inside the icon-button across
different button sizes. This also sets the aspect-ratio of icon
buttons to 1:1, to constraint these buttons to a square shape.

--- a/web/styles/buttons.css
+++ b/web/styles/buttons.css
@@ -364,6 +364,9 @@
     /* This class should always be used with an icon-button-* class
        defining the color scheme of the button, defined below. */
     display: flex;
+    justify-content: center;
+    align-items: center;
+    aspect-ratio: 1;
     font-size: var(--base-font-size-px);
     background-color: transparent; /* Override button default background color */
     padding: 0.375em;
